Create endpoint to handle the reporting of bad veteran representative contact data (#15183)
* create route

* route should hit FlagAccreditedRepresentativesController

* create empty FlagAccreditedRepresentativesController

* create empty FlaggedVeteranRepresentativeContactData model

* add model validations

* whoops - update uniqueness validation

* flesh out  FlagAccreditedRepresentativesController

* write model specs to test flag_type and uniqueness

* write tests for FlagAccreditedRepresentativesController

* change representative_id values to strings in FlaggedVeteranRepresentativeContactData spec

* update controller, get controller tests to pass

* create custom flag_type

* fix model path, update validations

* update model spec path, get basic tests passing

* update model error messages

* update FlagAccreditedRepresentativesController to be able to handle multiple flags per rep at once

* remove commented-out require in engine.rb

* make flagged_value required

* fix model spec

* fix request specs

* update request tests (whoops was testing model in this spec)

* remove commented-out code

* add to-do comment

* finish writing model tests

* add tests for ip_address to model

* wrap creating flags in a transaction

* add tests for handling multiple flags in a request

* update phone number values in model tests

* update email address value in model tests for consistency

* remove skip verify_authenticity_token before action

* add rspec meta tag csrf: false to FlagAccreditedRepresentativesController spec

* disable csrf protection while running tests using rspec metadata tag

* Add CSRF protection comment to spec_helper.rb file

* don't include calls to render in the transaction

* use enum for flag_type

* update test for invalid flag_type

* create feature toggles for flagging rep contact data

* update feature name in flag controller

* make feature toggle generic (so it ap

--- a/config/features.yml
+++ b/config/features.yml
@@ -465,6 +465,10 @@ features:
     actor_type: user
     description: Enables frontend of Find a Representative
     enable_in_development: true
+  flag_a_representative:
+    actor_type: user
+    description: Enables flag a rep for Find a Rep
+    enable_in_development: true
   form526_legacy:
     actor_type: user
     description: If true, points controllers to the legacy EVSS Form 526 instance. If false, the controllers will use the Dockerized instance running in DVP.
